--- a/index.html
+++ b/index.html
@@ -1,22 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Name</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./imgs/logo.svg" type="image/x-icon" />
+    <!--logo here -->
+    <title>Time sec</title>
+    <link rel="icon" href="./images/png/photo_2023-09-18_22-48-14.jpg">
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- HEADER START -->
-    <header class="header"></header>
+    <header class="header container">
+      <div class="header-top">
+        <a href="index.html">
+          <img
+            src="./images/png/Без названия.png"
+            alt="designo logo"
+            height="100px"
+        /></a>
+        <nav class="site-nav-bar">
+          <a class="site-nav__list" href="#">OUR COMPANY</a>
+          <a class="site-nav__list" href="#">LOCATIONS</a>
+          <a class="site-nav__list" href="#">CONTACT</a>
+        </nav>
+        <img
+          class="burger-bar"
+          src="./images/png/burger-bar.png"
+          alt="menu"
+          width="24"
+          height="20"
+        />
+      </div>
+      <div class="header_bottom">
+        <div class="header_bottom_first">
+        <h1 class="header_bottom_first_h1">Покупаути 10% скидка срочно щас и за 2 наски есть особеный подарок!!!</p>
+        <a href="#" class="header_bottom_first_a">Learn More</a>
+        </div>
+        <div class="header_bottom_second">
+          <img class="header_bottom_second_img" src="./images/png/photo_2023-09-18_21-58-34.jpg" alt="Iphone"
+          width="1500px">
+        </div>
+      </div>
+    </header>
     <!-- HEADER END -->
-    
+
     <!-- MAIN START-->
-    <main class="main"></main>
+    <main class="main container">
+      <div class="main_all_top">
+        <div class="main_all_only-card1">
+          <div class="main_all_card1">
+            <div class="main_all_card1_h2">
+            <h2>WEB DESIGN</h2>
+          </div>
+          <div class="main_all_card1_h3">
+            <h3 class="main_all_card3_h4">VIEW PROJECTS</h3><img src="./images/svg/this is).svg" alt=">"
+            width="4px"
+            height="8px">
+          </div>
+                </div>
+        </div>
+        <div class="main_all_card2_card3">
+          <div class="main_all_card2">
+            <div class="main_all_card2_h2">
+            <h2>APP DESIGN</h2>
+          </div>
+          <div class="main_all_card2_h3">
+            <h3 class="main_all_card3_h4">VIEW PROJECTS</h3><img src="./images/svg/this is).svg" alt=">"
+            width="4px"
+            height="8px">
+          </div>
+                </div>
+          <div class="main_all_card3">
+            <div class="main_all_card3_h2">
+            <h2>GRAPHIC DESIGN</h2>
+          </div>
+          <div class="main_all_card3_h3">
+            <h3 class="main_all_card3_h4">VIEW PROJECTS</h3><img src="./images/svg/this is).svg" alt=">"
+            width="4px"
+            height="8px">
+          </div>
+                </div>
+        </div>
+      </div>
+     <div class="main_bottom">
+      <div class="main_bottom_cards">
+        <div class="main_bottom_card1">
+          <div class="main_bottom_card1_img"><img src="./images/svg/human1.svg" alt="man work in laptop"></div>
+          <div>
+            <h3 class="main_bottom_card1_h3">Instagram</h3>
+            <a href="https://www.instagram.com/tirobrin/">my instagram</a>
+          </div>
+        </div>
+        <div class="main_bottom_card2">
+          <div class="main_bottom_card2_img"><img src="./images/svg/human2.svg" alt="woman work in laptop"></div>
+          <div>
+            <h3>Telegram</h3>
+           <a href="https://t.me/muslimboy2010">My telegram</a>
+          </div>
+        </div>
+        <div class="main_bottom_card3">
+          <div class="main_bottom_card3_img"><img src="./images/svg/human3.svg" alt="they friends"></div>
+          <div>
+            <h3>E-mail</h3>
+            <a href="#">+998 91 041 90 51</a>
+          </div>
+        </div>
+      </div>
+     </div>
+    </main>
     <!-- MAIN END-->
 
-    <!-- FOOTER START -->
-    <footer class="footer"></footer>
-    <!-- FOOTER END -->
-</body>
+
+  </body>
 </html>
